--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,11 +24,8 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Run tests
-        run: ./gradlew test
-
       - name: Build jar
-        run: ./gradlew bootJar
+        run: ./gradlew build 
 
       - name: Log in to Docker Hub
         run: |
