--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: pet
-          image: DOCKER_USERNAME/pet:latest   # placeholder, CI will replace this
+          image: vimanthan/pet:latest
           ports:
             - containerPort: 8080
 ---
